# sql-autoloader

./: .env  .gitignore  README.md  __init__.py  pyproject.toml  pytest.ini  setup.py
etl_components/: __init__.py  connections.py  connector.py  connectors.py  convertors.py  dataframe.py  dataframe_operations.py  exceptions.py  interactions.py  pandas_dataframe.py  parsers.py  polars_dataframe.py  postgres_connector.py  query_generators.py  schema.py  sqlite_connector.py
postgres_etl_components/: connections.py
sql_autoloader/: __init__.py  connector.py  dataframe_operations.py  exceptions.py  postgres_connector.py  schema.py  sqlite_connector.py
sql_autoloader/postgres/: __init__.py  postgres_connector.py
tests/: __init__.py  generators.py  test_bugs.py  test_connections.py  test_connector.py  test_convertors.py  test_dataframe.py  test_dataframe_operations.py  test_integrations.py  test_interactions.py  test_pandas_dataframe.py  test_parsers.py  test_polars_dataframe.py  test_postgres_connector.py  test_query_generators.py  test_schema.py  test_sqlite_connector.py
