[tool.poetry]
name = "etl-components"
version = "2.0.0"
description = "Components to automate loading steps in ETL pipelines"
authors = ["Luc Heuff <10941592+LucHeuff@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "etl_components"}]


[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.3"
pydantic = "^2.9.2"
more-itertools = "^10.5.0"
polars = "^1.9.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"
ruff = "^0.2.2"
neovim = "^0.3.1"
pytest = "^8.0.1"
poetry2setup = "^1.1.0"
hypothesis = {extras = ["numpy"], version = "^6.115.3"}

[tool.ruff]
line-length = 80
output-format = 'concise'

[tool.ruff.lint]
select = [
    "F", "C90", "I", "N", "D", "ANN", "BLE", "FBT", "B", "A", "C4", "EM",
    "ICN", "LOG", "G", "INP", "PIE", "T20", "PYI", "PT", "RSE", "RET", "SLF",
    "SIM", "ARG", "FIX", "ERA", "PD", "PL", "TRY", "PERF", "RUF"
]
ignore = ["ANN101", "PLR09", "D100", "D201", "D203", "D213", "F401", "PD901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
