[project]
name = "sql-autoloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luc Heuff", email = "10941592+LucHeuff@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=10.5.0",
    "networkx>=3.4.2",
    "polars>=1.19.0",
    "pydantic>=2.10.5",
]

[project.optional-dependencies]
postgres = [
    "psycopg>=3.2.3",
]

[tool.ruff]
extend = "~/ruff.toml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.23.2",
    "hypothesis[numpy]>=6.123.17",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]
