[project]
name = "sql-autoloader"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Luc Heuff", email = "10941592+LucHeuff@users.noreply.github.com" }
]
dependencies = [
  "more-itertools>=10.5.0",
  "networkx>=3.4.2",
  "polars>=1.19.0",
  "pydantic>=2.10.5",
]

[project.optional-dependencies]
postgres = [
  "psycopg>=3.2.3",
]

[dependency-groups]
dev = [
  "hypothesis[numpy]>=6.123.17",
  "psycopg>=3.2.5",
  "pytest>=8.3.4",
  "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["*/.local/*"]

[tool.ruff]
extend = "~/ruff.toml"
